--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,9 +8,12 @@
 	width: 50%;
 	height: 200px;
 	border: 2px solid #000000;
+	text-align: center;
 }
 
 input {
-	margin: 50px auto;
-	width: 50%;
+	margin: 50px 25%;
+    width: 50%;
+    height: 30px;
+    font-size: 25px;
 }
