--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,12 +3,13 @@
 	padding: 0px;
 }
 
-#text-to-write{
+#animated-text{
 	margin: 50px auto;
 	width: 50%;
 	height: 200px;
 	border: 2px solid #000000;
-	text-align: center;
+	font-family: Arial,serif;
+    font-size: 25px;
 }
 
 input {
@@ -16,4 +17,12 @@ input {
     width: 50%;
     height: 30px;
     font-size: 25px;
+}
+
+#progress-bar{
+	height: 5px;
+	margin: 20px;
+	background-color: black;
+	width: 10px;
+	transition:0.4s;
 }
