--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,8 @@
 		var str = $("#text-to-write").text();
 		var res = str.split(" ");
 		var counter = 0;
-		var t0 = 2;
+		var t0 = 0;
+		var errors = 0;
 
 		for (var i = 0; i <= res.length - 1; i++) {
 			document.getElementById('animated-text').innerHTML += "<span id='word-" + i + "'>"+ res[i] +"</span> ";
@@ -56,7 +57,8 @@
 		    	$('#type-input').val('');
 		    	wpm = chars/((t1 - t0 - 5000)/60000)/5;
 		    	console.log("Your speed: " + Math.round(wpm) + " WPM.");
-		    	$('#countdown').text("Your speed is " + Math.round(wpm) + " WPM.");
+		    	accuracy = 100 - (errors/chars*100);
+		    	$('#countdown').text("Your speed is " + Math.round(wpm) + " WPM. Your accuracy " + Math.round(accuracy) +"%.");
 		    }
 
 		    if (event.keyCode === 32){
@@ -67,7 +69,8 @@
 			        progressUpdate(counter);
 		    	} else {
 		    		$("#type-input").css("background-color", "rgba(255,0,0,0.7)");
-		    		$("#word-" + counter).css("color", "red");
+		    		$("#word-" + counter).css({"color": "rgba(255,0,0,0.7)", "text-decoration": "underline"});
+		    		errors++;
 		    		console.log("wrong: " + res[counter]);
 		    	}
 		    }
@@ -87,7 +90,8 @@
 			};
 			if( $("#type-input").val().replace(/ /g,'') != res[counter].slice(0, length) ){
 		    	$("#type-input").css("background-color", "rgba(255,0,0,0.7)");
-		    	$("#word-" + counter).css("color", "red");
+		    	$("#word-" + counter).css({"color": "rgba(255,0,0,0.7)", "text-decoration": "underline"});
+		    	errors++;
 		    } else {
 		    	$("#type-input").css("background-color", "white");
 		    	$("#word-" + counter).css({"color": "green", "text-decoration": "underline"});
